resource-manifest/sa-recognizer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-recognizer
spec:
  containers:
    - image: nekromant322/overmoney-recognizer:first
      name: sa-recognizer
      ports:
        - containerPort: 80
