resource-manifest/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: client
    - port: 9093
      name: controller
  selector:
    app: kafka
