resource-manifest/postgres-telegram-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-telegram-bot-deployment
  labels:
    app: postgres-telegram-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-telegram-bot
  template:
    metadata:
      labels:
        app: postgres-telegram-bot
    spec:
      containers:
        - name: postgres-telegram-bot
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-telegram-bot-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-telegram-bot
