resource-manifest/sa-kafka-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
spec:
  type: NodePort
  ports:
    - port: 9092
      nodePort: 30092
      name: external-port
  selector:
    app: kafka
