resource-manifest/sa-prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-prometheus
  labels:
    app: sa-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sa-prometheus
  template:
    metadata:
      labels:
        app: sa-prometheus
    spec:
      serviceAccountName: prometheus-sa
      containers:
        - name: sa-prometheus
          image: prom/prometheus:v2.33.5
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.retention.time=14d"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: sa-prometheus-svc
spec:
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: sa-prometheus
