resource-manifest/service-sa-invest-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-invest-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: sa-invest
