resource-manifest/service-sa-orchestrator-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-orchestrator
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: sa-orchestrator
