resource-manifest/service-sa-recognizer-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-recognizer-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: sa-recognizer
