resource-manifest/service-sa-telegram-bot-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sa-telegram-bot-lb
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: sa-telegram-bot
