resource-manifest/service-wit-ai-go-proxy-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wit-ai-go-proxy-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: sa-wit-ai-go-proxy
