resource-manifest/wit-ai-go-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wit-ai-go-proxy-svc
spec:
  ports:
    - port: 3333
      protocol: TCP
      targetPort: 8080
  selector:
    app: wit-ai-go-proxy
