resource-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sa-orchestrator-svc
                port:
                  number: 80
          - path: /front
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: sa-grafana-svc
                port:
                  number: 3000
          - path: /kafka-ui
            pathType: ImplementationSpecific
            backend:
              service:
                name: kafka-ui-svc
                port:
                  number: 80
